# barber

./: .env.example  .gitignore  barbe-prd.md  plan.md  pyproject.toml  render.yaml  requirements.txt  roadmap.md  start.bat  stop.bat
ai/: face_analyzer.py  face_validator.py  hair_swap.py
app/: config.py  dependencies.py  main.py  models.py
conversation/: handlers.py  scripts.py  state_machine.py
data/: face_shape_map.json  haircuts.json
specs/001-free-image-providers/: implementation-summary.md  plan.md  spec.md  tasks.md
whatsapp/: client.py  interactive.py
