[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-barber-whatsapp-bot"
version = "0.1.0"
description = "AI Barber WhatsApp Bot — Virtual try-on chatbot for barbershops"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "mediapipe>=0.10.0",
    "Pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "google-genai>=1.0.0",
    "replicate>=1.0.0",
    "aiofiles>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx-sse>=0.4.0",
]

[tool.setuptools.packages.find]
include = ["app*", "whatsapp*", "ai*", "conversation*", "booking*"]
